--- a/styles.css
+++ b/styles.css
@@ -128,16 +128,14 @@ img {
   top: 12%;
 }
 
-
 #skillImage1 {
   width: 80%;
 }
 
 #skillImage2 {
-  border: none;
   float: right;
   margin-left: 50px;
-  background-color: #00cc99;
+  background-color: #6e38b9;
   width: 80%;
 }
 
@@ -167,31 +165,30 @@ img {
   text-align: right;
 }
 .portfolio-button {
-	background:linear-gradient(to bottom, #b06b4e 5%, #b06b4e 100%);
-	background-color:#b06b4e;
-	border-radius:28px;
-	border:1px solid #b06b4e;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:20px;
-	padding:16px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+  background: linear-gradient(to bottom, #b06b4e 5%, #b06b4e 100%);
+  background-color: #b06b4e;
+  border-radius: 28px;
+  border: 1px solid #b06b4e;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
   position: absolute;
   top: 10px;
   right: 10px;
 }
 .portfolio-button:hover {
-	background:linear-gradient(to bottom, #b06b4e 5%, #b06b4e 100%);
-	filter: brightness(85%);
+  background: linear-gradient(to bottom, #b06b4e 5%, #b06b4e 100%);
+  filter: brightness(85%);
   text-decoration: none;
 }
 
-.portfolio-title{
+.portfolio-title {
   background-color: #66bfbf;
 }
-
 
 @media (max-width: 575px) {
   .skillImage {
